--- a/JS-Manual/JS-Manual/index.html
+++ b/JS-Manual/JS-Manual/index.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="mod-2-notes.js"></script>
   <title>Hello World</title>
 </head>
 <body>
-  <script src="mod-2-notes.js">
-    <h1>Hello World</h1>
-  </script>
 </body>
 </html>
